--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         }
     },
     "require": {
-        "omnipay/common": "^3"
+        "omnipay/common": "^3",
+        "guzzlehttp/guzzle": "^6.3"
     }
 }
